--- a/designwebpage.css
+++ b/designwebpage.css
@@ -6,7 +6,7 @@ body{
 }
 
 .tes{
-    background-image: url(libraria.jpg);
+    background-image: url(img_page\\libraria.jpg);
     background-repeat: no-repeat ;
     margin-top: 0px;
 }
