--- a/hyr.css
+++ b/hyr.css
@@ -3,7 +3,7 @@ form{
     width: 450px;
     height: 450px;
     border: 4px teal solid;
-    background-image: url(login1.jpg);
+    background-image: url(img_page\\login1.jpg);
     margin-top: 50px;
     margin-left: 400px;
     padding: 26px;
