--- a/regjistrohu.css
+++ b/regjistrohu.css
@@ -3,7 +3,7 @@ form{
   width: 550px;
   height: 450px;
   border: 2px lightgreen solid;
-  background-image: url(regjistrimi.gif);
+  background-image: url(img_page\\regjistrimi.gif);
   margin-top: 100px;
   margin-left: 200px;
   padding: 26px;
